# RobotBrain

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.en.md  README.md  bootstrap  config.h  config.h.in  envsetup.sh  install_dependents.sh  install_so.sh  temp.txt  version.h.in
data/protos/: robot_grpc_service.proto
docs/resources/dots/: nxc100_state_machine.dot  state_machine.dot
docs/scripts/: state_machine_generator.sh
include/: CMakeLists.txt
include/robot_brain/: command_types.hpp  ethercat_frame_types.hpp
modules/: CMakeLists.txt
modules/components/: CMakeLists.txt
modules/components/ethercat_component/: CMakeLists.txt
modules/components/ethercat_component/include/: eni_panasonic.hpp  eni_slaves.hpp  eni_xb4s.hpp  ethercat_component.h  ethercat_device.h
modules/components/ethercat_component/src/: CMakeLists.txt  ethercat_component.cc  ethercat_device.cc
modules/components/ethercat_component/test/: CMakeLists.txt  ethercat_component_test.cc  ethercat_device_test.cc  test_main.cc
modules/components/exception_component/: CMakeLists.txt
modules/components/exception_component/include/: exception_component.h
modules/components/exception_component/src/: CMakeLists.txt  exception_component.cc
modules/components/exception_component/test/: CMakeLists.txt  exception_component_test.cc  exception_service_test.cc  test_main.cc
modules/components/grpc_service_component/: CMakeLists.txt
modules/components/grpc_service_component/include/: grpc_service_component.h
modules/components/grpc_service_component/src/: CMakeLists.txt  grpc_service_component.cc
modules/components/grpc_service_component/test/: CMakeLists.txt  test_main.cc  test_robot_grpc_service.cc
modules/components/interlock_component/: CMakeLists.txt
modules/components/interlock_component/include/: interlock_component.h
modules/components/interlock_component/src/: CMakeLists.txt  interlock_component.cc
modules/components/robot_component/: CMakeLists.txt
modules/components/robot_component/include/: robot_component.h
modules/components/robot_component/src/: CMakeLists.txt  robot_component.cc
modules/components/robot_component/test/: CMakeLists.txt  robot_component_test.cc  test_main.cc
modules/components/robot_service_component/: CMakeLists.txt
modules/components/robot_service_component/include/: robot_service_component.h
modules/components/robot_service_component/src/: CMakeLists.txt  robot_service_component.cc
modules/components/robot_service_component/test/: CMakeLists.txt  robot_service_comonent_test.cc  test_main.cc
modules/components/test_com/: CMakeLists.txt
modules/components/test_com/include/: test_com.h
modules/components/test_com/src/: CMakeLists.txt  test_com.cc
modules/components/test_com/test/: CMakeLists.txt  com_test.cc  socket_test.cc
modules/components/trajectory_component/: CMakeLists.txt
modules/components/trajectory_component/include/: trajectory_component.h
modules/components/trajectory_component/src/: CMakeLists.txt  trajectory_component.cc
modules/components/trajectory_component/test/: CMakeLists.txt  test_mian.cc  traj_test.cc
modules/core/: CMakeLists.txt
modules/core/src/: CMakeLists.txt  application.cc  application.i  config.cc  config_utils.cc  context.cc  data_manager.cc  license.cc  robot_model.cc  verison.cc
modules/core/test/: CMakeLists.txt  config_test.cc  config_utils_test.cc  test_robotmodel.cc
modules/deployment/: robot_deployer.lua
modules/robot_brain/: CMakeLists.txt
modules/robot_brain/src/: CMakeLists.txt  robot_scheduler.cc  robot_server_main.cc
modules/robot_brain/test/: CMakeLists.txt  robot_test.cc  test_main.cc
modules/robot_ctl/: CMakeLists.txt  README.md
modules/robot_ctl/include/: robot_ctl.h  robot_rpc_client.hpp
modules/robot_ctl/src/: CMakeLists.txt  robot_ctl.cc
modules/robot_ctl/test/: CMakeLists.txt  robot_ctl_test.cc  test_main.cc
modules/robot_exception/: CMakeLists.txt
modules/robot_exception/src/: CMakeLists.txt  robot_exception.cc
modules/robot_exception/test/: CMakeLists.txt  test_main.cc
modules/robot_interpolation/: CMakeLists.txt
modules/robot_interpolation/src/: count.cc  velocityprofile.cc  velocityprofile_base.cc  velocityprofile_doubleS.cc  velocityprofile_onlinedoubleS.cc  velocityprofile_polynomial.cc
modules/robot_interpolation/test/: CMakeLists.txt  doubleS_test.cc  polynomial_test.cc  test_main.cc
modules/robot_planning/: CMakeLists.txt
modules/robot_planning/src/: CMakeLists.txt  bezier.cc  double_hump.cc  interpolate.cc
modules/robot_planning/test/: CMakeLists.txt  kdl_test.cc
modules/robot_server/: CMakeLists.txt  README.md
modules/robot_server/src/: CMakeLists.txt  robot_server.cc
modules/robot_server/test/: CMakeLists.txt
modules/robot_teach/: CMakeLists.txt
modules/robot_teach/src/: CMakeLists.txt  teach_point.cpp
modules/robot_teach/test/: CMakeLists.txt  test_main.cpp  test_save_point.cpp
tools/docker_env/: Dockerfile  README.md
tools/envoy/: envoy.yaml  run_envoy.sh
typekit/: CMakeLists.txt  Opaques.hpp  Plugin.cpp  Types.hpp  manifest.xml  package.xml  robot_brain-typekit.pc.in  robot_brain.tlb  robot_brain.typelist  typekit
typekit/transports/typelib/: CMakeLists.txt  Registration.hpp  TransportPlugin.cpp  TransportPlugin.hpp  __rosc__Arm_pos___rosc__AxisNum.cpp  __rosc__CommandExecResult___rosc__CommandType.cpp  __rosc__DigitIOFrame___rosc__EncoderFrame.cpp  __rosc__EthercatCtlFrame___rosc__EthercatFrameSendStatus.cpp  __rosc__EthercatStatusFrame___rosc__ExecStatus.cpp  (+3 more)
typekit/type_info/: Registration.hpp  __rosc__Arm_pos___rosc__AxisNum.cpp  __rosc__CommandExecResult___rosc__CommandType.cpp  __rosc__DigitIOFrame___rosc__EncoderFrame.cpp  __rosc__EthercatCtlFrame___rosc__EthercatFrameSendStatus.cpp  __rosc__EthercatStatusFrame___rosc__ExecStatus.cpp  __rosc__MotionMode___rosc__ServoState.cpp  __rosc__TransferSpeedType___std__vector____std__string__.cpp  boost__int16_t[]_boost__int32_t[].cpp  boost__int8_t[]_boost__uint16_t[].cpp  boost__uint8_t[]_double[].cpp
(+43 files in other folders)
